--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -2,3 +2,7 @@
 /FiguraGeometrica.class
 /Rectangulo.class
 /Triangulo.class
+/Circulo_JSG.class
+/FiguraGeometrica_JSG.class
+/Rectangulo_JSG.class
+/Triangulo_JSG.class
