--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -1,4 +1,2 @@
-/Circulo_JSG.class
-/FiguraGeometrica_JSG.class
-/Rectangulo_JSG.class
-/Triangulo_JSG.class
+/Circulo_JSGTest.class
+/Circulo_JSGTestParameterized.class
